UI for add item/bug forms is tightened up to not make them too long to scroll

--- a/media/css/main.css
+++ b/media/css/main.css
@@ -275,8 +275,7 @@ dd:hover .priority-select {
 
 
 /* Add Action Item */
-.owner-form-group,
-.assignedto-form-group {
+.form-group-col-2 {
     float: left;
     width: 47%;
 }
